--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Theatrics</string>
+    <string name="search_hint">Search</string>
+    <string name="title">Title:</string>
+    <string name="release_year">Release Year:</string>
+    <string name="run_time">Run Time (min):</string>
+    <string name="rating">Rating:</string>
+    <string name="description">Description:</string>
 </resources>
