--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="run_time">Run Time (min):</string>
     <string name="rating">Rating:</string>
     <string name="description">Description:</string>
+    <string name="no_results">No Results</string>
 </resources>
